# pyconcepticon

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  RELEASING.md  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
src/pyconcepticon/: __init__.py  __main__.py  api.py  cli_util.py  commands.py  glosses.py  metadata.py  models.py  test_util.py  util.py
src/pyconcepticon/commands/: attributes.py  check.py  citation.py  create_metadata.py  dump.py  graph.py  intersection.py  link.py  lookup.py  make_app.py  make_linkdata.py  map_concepts.py  mergers.py  notlinked.py  recreate_networks.py  rename.py  shrink.py  stats.py  test.py  union.py  upload_sources.py  validate.py
src/pyconcepticon/test_repos/: metadata.json
src/pyconcepticon/test_repos/concepticondata/conceptlists/: Perrin-2010-110.tsv  Sun-1991-1004.tsv  default-metadata.json
src/pyconcepticon/test_repos/concepticondata/conceptlists/Sun-1991-1004/: convert.py
src/pyconcepticon/test_repos/concepticondata/references/: references.bib
tests/: conftest.py  test_api.py  test_commands.py  test_glosses.py  test_models.py  test_util.py
tests/fixtures/: CONTRIBUTORS.md  conceptlist.tsv  conceptlist2.tsv
tests/fixtures/concepticondata/: concepticon.tsv  conceptrelations.tsv  retired.json
tests/fixtures/concepticondata/concept_set_meta/: lego.tsv
tests/fixtures/concepticondata/sources/: cdstar.json
tests/fixtures/mappings/: map-en.tsv
