[metadata]
name = pyconcepticon
version = 3.0.1.dev0
license = Apache 2.0
license_file = LICENSE
author = Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = programmatic curation of concepticon-data
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    data
    linguistics
url = https://github.com/concepticon/pyconcepticon
project_urls =
    Bug Tracker = https://github.com/concepticon/pyconcepticon/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    setuptools
    attrs>=18.1.0
    pybtex>=0.22.2
    csvw>=1.4.5
    clldutils>=3.4
    cldfcatalog>=1.3
    cdstarcat
    nameparser
    termcolor
    tabulate
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    concepticon = pyconcepticon.__main__:main

[options.extras_require]
dev =
    flake8
    wheel
    twine
    build
    tox
test =
    pytest>=5
    pytest-mock
    pytest-cov


[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[easy_install]
zip_ok = false

[tool:pytest]
minversion = 3.6
testpaths = tests
addopts =
    --cov

[coverage:run]
source =
    pyconcepticon
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
